@@ -48,3 +48,10 @@
 ------------------------------------------------------------------
 ALTER TABLE community ADD admin INTEGER REFERENCES epersongroup ( eperson_group_id );
 CREATE INDEX community_admin_fk_idx ON Community(admin);
+
+-------------------------------------------------------------------------
+-- DS-260 Cleanup of Owning collection column for template item created 
+-- with the JSPUI after the collection creation
+-------------------------------------------------------------------------
+UPDATE item SET owning_collection = null WHERE item_id IN 
+	(SELECT template_item_id FROM collection WHERE template_item_id IS NOT null);
